# internal/dto/order_dto.go
@@ -43,3 +43,30 @@ type CreateOrderResponse struct {
 
 	CreatedAt time.Time `json:"created_at"`
 }
+
+type GetMyOrdersQuery struct {
+	Page     int `form:"page"`
+	PageSize int `form:"page_size"`
+}
+
+type UserOrderListItemResponse struct {
+	ID uint `json:"id"`
+
+	Status string `json:"status"`
+
+	TotalPrice float64 `json:"total_price"`
+
+	ItemsCount int `json:"items_count"`
+
+	CreatedAt time.Time `json:"created_at"`
+}
+
+type UserOrdersResponse struct {
+	Orders []UserOrderListItemResponse `json:"orders"`
+
+	Page int `json:"page"`
+
+	PageSize int `json:"page_size"`
+
+	Total int64 `json:"total"`
+}
